[gd_scene load_steps=17 format=4 uid="uid://cxt1i3lg163fv"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_1cr7u"]
[ext_resource type="PackedScene" uid="uid://bekcr72y8jcov" path="res://scenes/tilemaps/environment_tilemap.tscn" id="1_bqn2v"]
[ext_resource type="PackedScene" uid="uid://bmro7y21hrdqx" path="res://scenes/player/player.tscn" id="2_fcjlt"]
[ext_resource type="Texture2D" uid="uid://btbtiqf7qu4jm" path="res://assets/background/background.png" id="2_nwq1x"]
[ext_resource type="Texture2D" uid="uid://bpqluro1mgxyc" path="res://assets/background/midground.png" id="3_labnd"]
[ext_resource type="PackedScene" uid="uid://do03vg5ef0w5e" path="res://scenes/player/player_camera.tscn" id="3_q44ju"]
[ext_resource type="Texture2D" uid="uid://d3kngqd2ups6a" path="res://assets/background/foreground.png" id="4_jr3op"]
[ext_resource type="PackedScene" uid="uid://c58addhj3pagn" path="res://scenes/world/world_boundary.tscn" id="4_l0utk"]
[ext_resource type="PackedScene" uid="uid://b16bem3hxgf3y" path="res://fx/rain_manager.tscn" id="6_oh5dt"]
[ext_resource type="Texture2D" uid="uid://drpq2y8uxla1n" path="res://assets/ui/progress bar most rounded progress red.png" id="10_fq61m"]
[ext_resource type="Texture2D" uid="uid://dqggwr01j0lrk" path="res://assets/ui/progress bar most rounded over.png" id="11_p7xb6"]
[ext_resource type="Texture2D" uid="uid://l6eto2jgy0bo" path="res://assets/ui/progress bar most rounded progress orange.png" id="12_p1waq"]
[ext_resource type="PackedScene" uid="uid://br4g31kekl30m" path="res://performance_monitoring/performance_monitor.tscn" id="13_jliwf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ciism"]
size = Vector2(240.775, 3.63616)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0w7a"]
bg_color = Color(1, 0, 0.0941176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikbku"]
bg_color = Color(0, 0.972549, 0.121569, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TestLevel" type="Node2D"]
script = ExtResource("1_1cr7u")

[node name="Background" type="Node2D" parent="."]

[node name="Background" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.1, 1)
repeat_size = Vector2(128, 0)
repeat_times = 4

[node name="Sprite2D" type="Sprite2D" parent="Background/Background"]
position = Vector2(256.473, -63.0672)
texture = ExtResource("2_nwq1x")
centered = false

[node name="Midground" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 1)
repeat_size = Vector2(144, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Background/Midground"]
position = Vector2(144.242, 52.9536)
texture = ExtResource("3_labnd")
centered = false

[node name="Foreground" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.9, 1)
repeat_size = Vector2(500, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Foreground"]
position = Vector2(0, -30)
texture = ExtResource("4_jr3op")
centered = false

[node name="RainManager" parent="." instance=ExtResource("6_oh5dt")]

[node name="EnvironmentTileMap" parent="." instance=ExtResource("1_bqn2v")]
tile_map_data = PackedByteArray("AAAAAAsAAgAAAAEAAAAAAAwAAgAAAAIAAAAAAA0AAgAAAAMAAAAAAA8AAgAAAAUAAAAAABAAAgAAAAYAAAABAAsAAgABAAEAAAABAAwAAgABAAIAAAABAA0AAgABAAMAAAABAA4AAgABAAQAAAABAA8AAgABAAUAAAABABAAAgABAAYAAAACAAsAAgACAAEAAAACAAwAAgACAAIAAAACAA0AAgACAAMAAAACAA4AAgACAAQAAAACAA8AAgACAAUAAAACABAAAgACAAYAAAADAAsAAgADAAEAAAADAAwAAgADAAIAAAADAA0AAgADAAMAAAADAA4AAgADAAQAAAADAA8AAgADAAUAAAADABAAAgADAAYAAAAEAAsAAgAEAAEAAAAEAAwAAgAEAAIAAAAEAA0AAgAEAAMAAAAEAA4AAgAEAAQAAAAEAA8AAgAEAAUAAAAEABAAAgAEAAYAAAAFAAsAAgAFAAEAAAAFAAwAAgAFAAIAAAAFAA0AAgAFAAMAAAAFAA4AAgAFAAQAAAAFAA8AAgAFAAUAAAAFABAAAgAFAAYAAAAGAAsAAgAGAAEAAAAGAAwAAgAGAAIAAAAGAA0AAgAGAAMAAAAGAA4AAgAGAAQAAAAGAA8AAgAGAAUAAAAGABAAAgAGAAYAAAAHAAsAAgAHAAEAAAAHAAwAAgAHAAIAAAAHAA0AAgAHAAMAAAAHAA4AAgAHAAQAAAAHAA8AAgAHAAUAAAAHABAAAgAHAAYAAAAIAAsAAgAIAAEAAAAIAAwAAgAIAAIAAAAIAA0AAgAIAAMAAAAIAA8AAgAIAAUAAAAIABAAAgAIAAYAAAAJAAsAAgAJAAEAAAAJAAwAAgAJAAIAAAAJAA0AAgAJAAMAAAAJABAAAgAJAAYAAAAKAAsAAgALAAEAAAAKAAwAAgALAAIAAAAKAA0AAgALAAMAAAALAAsAAgAMAAEAAAALAAwAAgAMAAIAAAALAA0AAgAMAAMAAAAMAAsAAgANAAEAAAAMAAwAAgANAAIAAAAMAA0AAgANAAMAAAANAAsAAgAOAAEAAAANAAwAAgAOAAIAAAANAA0AAgAOAAMAAAAVAAUAAgAWAAEAAAAVAAYAAgAWAAIAAAAVAAcAAgAWAAMAAAAVAAgAAgAWAAQAAAAVAAkAAgAWAAUAAAAVAAoAAgAWAAYAAAAWAAUAAgAXAAEAAAAWAAYAAgAXAAIAAAAWAAcAAgAXAAMAAAAWAAgAAgAXAAQAAAAWAAkAAgAXAAUAAAAWAAoAAgAXAAYAAAAXAAUAAgAYAAEAAAAXAAYAAgAYAAIAAAAXAAcAAgAYAAMAAAAXAAgAAgAYAAQAAAAXAAkAAgAYAAUAAAAXAAoAAgAYAAYAAAAYAAUAAgAZAAEAAAAYAAYAAgAZAAIAAAAYAAcAAgAZAAMAAAAYAAgAAgAZAAQAAAAYAAkAAgAZAAUAAAAYAAoAAgAZAAYAAAAZAAUAAgAaAAEAAAAZAAYAAgAaAAIAAAAZAAcAAgAaAAMAAAAZAAgAAgAaAAQAAAAZAAkAAgAaAAUAAAAZAAoAAgAaAAYAAAAaAAUAAgAbAAEAAAAaAAYAAgAbAAIAAAAaAAcAAgAbAAMAAAAaAAgAAgAbAAQAAAAaAAkAAgAbAAUAAAAaAAoAAgAbAAYAAAAbAAsAAgAMAAEAAAAbAAwAAgAMAAIAAAAbAA0AAgAMAAMAAAAcAAsAAgANAAEAAAAcAAwAAgANAAIAAAAcAA0AAgANAAMAAAAdAAsAAgAOAAEAAAAdAAwAAgAOAAIAAAAdAA0AAgAOAAMAAAAeAAsAAgALAAEAAAAeAAwAAgALAAIAAAAeAA0AAgALAAMAAAAeAA8AAgAAAAUAAAAeABAAAgAAAAYAAAAfAAsAAgAMAAEAAAAfAAwAAgAMAAIAAAAfAA0AAgAMAAMAAAAfAA4AAgABAAQAAAAfAA8AAgABAAUAAAAfABAAAgABAAYAAAAgAAsAAgANAAEAAAAgAAwAAgANAAIAAAAgAA0AAgANAAMAAAAgAA4AAgACAAQAAAAgAA8AAgACAAUAAAAgABAAAgACAAYAAAAhAAsAAgADAAEAAAAhAAwAAgADAAIAAAAhAA0AAgADAAMAAAAhAA4AAgADAAQAAAAhAA8AAgADAAUAAAAhABAAAgADAAYAAAAiAAsAAgAEAAEAAAAiAAwAAgAEAAIAAAAiAA0AAgAEAAMAAAAiAA4AAgAEAAQAAAAiAA8AAgAEAAUAAAAiABAAAgAEAAYAAAAjAAsAAgAFAAEAAAAjAAwAAgAFAAIAAAAjAA0AAgAFAAMAAAAjAA4AAgAFAAQAAAAjAA8AAgAFAAUAAAAjABAAAgAFAAYAAAAkAAsAAgAGAAEAAAAkAAwAAgAGAAIAAAAkAA0AAgAGAAMAAAAkAA4AAgAGAAQAAAAkAA8AAgAGAAUAAAAkABAAAgAGAAYAAAAlAAsAAgAHAAEAAAAlAAwAAgAHAAIAAAAlAA0AAgAHAAMAAAAlAA4AAgAHAAQAAAAlAA8AAgAHAAUAAAAlABAAAgAHAAYAAAAmAAsAAgAIAAEAAAAmAAwAAgAIAAIAAAAmAA0AAgAIAAMAAAAmAA8AAgAIAAUAAAAmABAAAgAIAAYAAAAnAAsAAgAJAAEAAAAnAAwAAgAJAAIAAAAnAA0AAgAJAAMAAAAnABAAAgAJAAYAAAAkAAUAAgAdAAEAAAAkAAYAAgAdAAIAAAAkAAcAAgAdAAMAAAAkAAgAAgAdAAQAAAAkAAkAAgAdAAUAAAAkAAoAAgAdAAYAAAAlAAUAAgAeAAEAAAAlAAYAAgAeAAIAAAAlAAcAAgAeAAMAAAAlAAgAAgAeAAQAAAAlAAkAAgAeAAUAAAAlAAoAAgAeAAYAAAAmAAUAAgAfAAEAAAAmAAYAAgAfAAIAAAAmAAcAAgAfAAMAAAAmAAgAAgAfAAQAAAAmAAkAAgAfAAUAAAAmAAoAAgAfAAYAAAAnAAUAAgAgAAEAAAAnAAYAAgAgAAIAAAAnAAcAAgAgAAMAAAAnAAgAAgAgAAQAAAAnAAkAAgAgAAUAAAAnAAoAAgAgAAYAAAAoAAUAAgAhAAEAAAAoAAYAAgAhAAIAAAAoAAcAAgAhAAMAAAAoAAgAAgAhAAQAAAAoAAkAAgAhAAUAAAAoAAoAAgAhAAYAAAApAAUAAgAiAAEAAAApAAYAAgAiAAIAAAApAAcAAgAiAAMAAAApAAgAAgAiAAQAAAApAAkAAgAiAAUAAAApAAoAAgAiAAYAAAAqAAUAAgAjAAEAAAAqAAYAAgAjAAIAAAAqAAcAAgAjAAMAAAAqAAgAAgAjAAQAAAAqAAkAAgAjAAUAAAAqAAoAAgAjAAYAAAArAAUAAgAkAAEAAAArAAYAAgAkAAIAAAArAAcAAgAkAAMAAAArAAgAAgAkAAQAAAArAAkAAgAkAAUAAAArAAoAAgAkAAYAAAAsAAUAAgAlAAEAAAAsAAYAAgAlAAIAAAAsAAcAAgAlAAMAAAAsAAgAAgAlAAQAAAAsAAkAAgAlAAUAAAAsAAoAAgAlAAYAAAAoAAsAAgARAAEAAAAoAAwAAgARAAIAAAAoAA0AAgARAAMAAAApAAsAAgASAAEAAAApAAwAAgASAAIAAAApAA0AAgASAAMAAAAqAAsAAgATAAEAAAAqAAwAAgATAAIAAAAqAA0AAgATAAMAAAAtAAsAAgAPAAUAAAAtAAwAAgAPAAYAAAAtAA0AAgAPAAcAAAAuAAsAAgAQAAUAAAAuAAwAAgAQAAYAAAArAAsAAgAUAAEAAAArAAwAAgAUAAIAAAArAA0AAgAUAAMAAAAsAAsAAgAOAAUAAAAsAAwAAgAOAAYAAAAsAA0AAgAOAAcAAAAYAAsAAgAOAAUAAAAYAAwAAgAOAAYAAAAYAA0AAgAOAAcAAAAZAAsAAgAOAAUAAAAZAAwAAgAOAAYAAAAZAA0AAgAOAAcAAAAaAAsAAgAOAAUAAAAaAAwAAgAOAAYAAAAaAA0AAgAOAAcAAAAXAAsAAgAOAAUAAAAXAAwAAgAOAAYAAAAXAA0AAgAOAAcAAAAVAAsAAgANAAUAAAAVAAwAAgANAAYAAAAVAA0AAgANAAcAAAAWAAsAAgAOAAUAAAAWAAwAAgAOAAYAAAAWAA0AAgAOAAcAAAAUAAsAAgAMAAUAAAAUAAwAAgAMAAYAAAAUAA0AAgAMAAcAAAATAAsAAgALAAUAAAATAAwAAgALAAYAAAATAA0AAgALAAcAAAAOAAsAAgAOAAUAAAAOAAwAAgAOAAYAAAAOAA0AAgAOAAcAAAAPAAsAAgAPAAUAAAAPAAwAAgAPAAYAAAAPAA0AAgAPAAcAAAAQAAsAAgAQAAUAAAAQAAwAAgAQAAYAAAAQAA0AAgAQAAcAAAA=")

[node name="Player" parent="." instance=ExtResource("2_fcjlt")]
position = Vector2(32.0203, 165.106)

[node name="Camera2D" parent="Player" node_paths=PackedStringArray("tile_map") instance=ExtResource("3_q44ju")]
position_smoothing_enabled = true
tile_map = NodePath("../../EnvironmentTileMap")

[node name="WorldBoundary" parent="." instance=ExtResource("4_l0utk")]
visible = false
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(1.06072, 111.802)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ciism")
debug_color = Color(0.972549, 0, 0.435294, 1)

[node name="Button" type="Button" parent="."]
offset_left = 199.185
offset_top = 60.773
offset_right = 258.185
offset_bottom = 91.7735
text = "SHAKE"

[node name="RainButton" type="Button" parent="."]
offset_left = 84.0324
offset_top = 59.3572
offset_right = 183.032
offset_bottom = 90.3577
text = "START RAIN"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 11.0
offset_top = 39.0
offset_right = 76.0
offset_bottom = 51.0
theme_override_styles/background = SubResource("StyleBoxFlat_w0w7a")
theme_override_styles/fill = SubResource("StyleBoxFlat_ikbku")
step = 1.0
value = 50.0
show_percentage = false

[node name="DamageButton" type="Button" parent="."]
offset_left = 1.0
offset_top = 58.0
offset_right = 78.0
offset_bottom = 89.0
text = "DAMAGE"

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 87.7039
offset_top = 38.8913
offset_right = 127.704
offset_bottom = 78.8913
texture_under = ExtResource("10_fq61m")
texture_over = ExtResource("11_p7xb6")
texture_progress = ExtResource("12_p1waq")

[node name="PerformanceMonitor" parent="." instance=ExtResource("13_jliwf")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="RainButton" to="." method="_on_rain_button_pressed"]
[connection signal="pressed" from="DamageButton" to="." method="_on_damage_button_pressed"]

[editable path="Player"]
